Camino only - Bug 456155: Correctly set up the tab chain when the bookmark bar is empty